syntax = "proto3";

package app;

option go_package = "app/proto";

message AddRequest {
  string url = 1;
}

message AddResponse {
  string short_url = 1;
}

message AddBatchRequest {
  message Url {
    string correlation_id = 1;
    string original_url = 2;
  }
  repeated Url urls = 1;
}

message AddBatchResponse {
  message Url {
    string correlation_id = 1;
    string short_url = 2;
  }
  repeated Url short_urls = 1;
}

message PingRequest {}

message PingResponse {}

message GetRequest {
  string token = 1;
}

message GetResponse {
  string url = 1;
}

message GetUserURLsRequest {}

message GetUserURLsResponse {
  message Url {
    string original_url = 1;
    string short_url = 2;
  }
  repeated Url urls = 1;
}

message DeleteURLsRequest {
  message Token {
    string value = 1;
  }
  repeated Token tokens = 1;
}

message DeleteURLsResponse {}

message StatsRequest {
  string XRealIP = 1;
}

message StatsResponse {
  int32 urls = 1;
  int32 users = 2;
}

service App {
  rpc Add(AddRequest) returns (AddResponse);
  rpc AddBatch(AddBatchRequest) returns (AddBatchResponse);
  rpc Ping(PingRequest) returns (PingResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc GetUserURLs(GetUserURLsRequest) returns (GetUserURLsResponse);
  rpc DeleteURLs(DeleteURLsRequest) returns (DeleteURLsResponse);
  rpc Stats(StatsRequest) returns (StatsResponse);
}